--- a/index.html
+++ b/index.html
@@ -1,281 +1,159 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Amitges by Reyes & Yoli</title>
   <style>
     body {
-      font-family: 'Georgia', serif;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #FFFFFF;
-      color: #2D1D2B;
     }
-
     header {
-      background-color: #5A3D57;
-      padding: 20px 40px;
+      background-color: #f8f8f8;
+      padding: 10px 20px;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      color: white;
+      justify-content: space-between;
     }
-
+    header img {
+      height: 50px;
+    }
+    nav {
+      background-color: #333;
+    }
+    nav ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex;
+    }
+    nav li {
+      position: relative;
+    }
+    nav a {
+      display: block;
+      padding: 14px 20px;
+      color: white;
+      text-decoration: none;
+    }
+    nav li:hover > ul {
+      display: block;
+    }
+    nav ul ul {
+      display: none;
+      position: absolute;
+      background-color: #444;
+      top: 100%;
+      left: 0;
+      min-width: 180px;
+      z-index: 1000;
+    }
+    nav ul ul li {
+      width: 100%;
+    }
+    nav ul ul a {
+      padding: 10px;
+    }
+    .content {
+      padding: 20px;
+    }
+    footer {
+      background-color: #f8f8f8;
+      padding: 20px;
+      text-align: center;
+    }
+    h1, h2 {
+      color: #333;
+    }
     .logo {
       display: flex;
       align-items: center;
-      gap: 10px;
     }
-
     .logo img {
-      max-height: 50px;
+      margin: 0 10px;
     }
-
-    .nombre-logo {
-      font-size: 1.2em;
-      font-weight: bold;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 25px;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: #d1c0d0;
-    }
-
-    .carrito {
-      position: relative;
-    }
-
-    .carrito-btn {
-      background-color: #5A3D57;
-      color: white;
-      border: 1px solid white;
-      border-radius: 6px;
-      padding: 8px 15px;
-      cursor: pointer;
-    }
-
-    .carrito-contenido {
-      display: none;
-      position: absolute;
-      right: 0;
-      top: 40px;
-      background: white;
-      color: #2D1D2B;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      min-width: 200px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-    }
-
-    .banner {
-      background: #F3EDF1;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .banner img {
-      max-width: 80%;
-    }
-
-    .linea {
-      height: 3px;
-      background: #5A3D57;
-      margin: 40px auto;
-      width: 80%;
-    }
-
-    .productos-destacados {
-      padding: 40px 20px;
-      background: #FFFFFF;
-      text-align: center;
-    }
-
-    .productos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 20px;
-    }
-
-    .producto {
-      background: #F3EDF1;
-      padding: 20px;
-      border-radius: 12px;
-      width: 250px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s;
-    }
-
-    .producto:hover {
-      transform: translateY(-5px);
-    }
-
-    .producto button {
-      margin-top: 15px;
-      padding: 8px 20px;
-      background-color: #5A3D57;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    .producto button:hover {
-      background-color: #402A3C;
-    }
-
-    .sobre-nosotras, .contacto {
-      background: #F3EDF1;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    footer {
-      background-color: #5A3D57;
-      color: white;
-      text-align: center;
-      padding: 15px 10px;
+    .contact-info {
       font-size: 0.9em;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
-<!-- Header -->
 <header>
   <div class="logo">
-    <img src="logo-amitges.png" alt="Logo Amitges">
-    <span class="nombre-logo">Amitges by Reyes & Yoli</span>
+    <img src="logo.png" alt="Logo Amitges">
+    <h1>Amitges by Reyes & Yoli</h1>
+    <img src="logo.png" alt="Logo Amitges">
   </div>
-  <nav>
-    <ul>
-      <li><a href="#home">Inicio</a></li>
-      <li><a href="#shop">Tienda</a></li>
-      <li><a href="#about">Sobre nosotras</a></li>
-      <li><a href="#contact">Contacto</a></li>
-    </ul>
-  </nav>
-  <div class="carrito">
-    <button class="carrito-btn" onclick="toggleCarrito()">Carrito (0)</button>
-    <div class="carrito-contenido" id="carrito-contenido">
-      <p>No hay productos.</p>
-      <button onclick="vaciarCarrito()">Vaciar carrito</button>
-    </div>
+  <div class="contact-info">
+    <p>Teléfono: <a href="tel:640897645">640 897 645</a></p>
+    <p>Email: <a href="mailto:amitgesbyreyesyyoli@gmail.com">amitgesbyreyesyyoli@gmail.com</a></p>
+    <p>Instagram: <a href="https://instagram.com/amitgesbyreyesyyoli" target="_blank">@amitgesbyreyesyyoli</a></p>
   </div>
 </header>
 
-<!-- Banner -->
-<section class="banner" id="home">
-  <img src="imagen-banner.jpg" alt="Verano SS25">
-</section>
+<nav>
+  <ul>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="#">Caballero</a>
+      <ul>
+        <li><a href="caballero-camisas.html">Camisas</a></li>
+        <li><a href="caballero-pantalones.html">Pantalones</a></li>
+        <li><a href="caballero-calzado.html">Calzado</a></li>
+        <li><a href="caballero-accesorios.html">Accesorios</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Señora</a>
+      <ul>
+        <li><a href="senora-blusas.html">Blusas</a></li>
+        <li><a href="senora-pantalones.html">Pantalones</a></li>
+        <li><a href="senora-accesorios.html">Accesorios</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Niñ@</a>
+      <ul>
+        <li><a href="ninio-ropa.html">Ropa</a></li>
+        <li><a href="ninio-accesorios.html">Accesorios</a></li>
+      </ul>
+    </li>
+    <li><a href="ofertas.html">Ofertas</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
+  </ul>
+</nav>
 
-<div class="linea"></div>
+<div class="content">
+  <h2>Bienvenidos a Amitges by Reyes & Yoli</h2>
+  <p>Somos Reyes y Yolanda, dos mamás emprendedoras que hemos creado Amitges con mucho amor e ilusión. En nuestra tienda en Benicasim encontrarás moda para toda la familia: caballero, señora y niñ@s. También tenemos una amplia gama de complementos para completar tu look.</p>
 
-<!-- Productos -->
-<section class="productos-destacados" id="shop">
-  <h2>¡Colección Verano SS25!</h2>
-  <div class="productos">
-    <div class="producto">
-      <h3>Ropa</h3>
-      <div class="categorias">
-        <ul>
-          <li><a href="ropa-senora.html">Señora</a></li>
-          <li><a href="ropa-caballero.html">Caballero</a></li>
-          <li><a href="ropa-nino.html">Niñ@</a></li>
-        </ul>
-      </div>
-    </div>
+  <h3>¿Dónde estamos?</h3>
+  <p>📍 Avenida Castellón, 30, Benicasim (Castellón)</p>
 
-    <div class="producto">
-      <h3>Calzado</h3>
-      <div class="categorias">
-        <ul>
-          <li><a href="calzado-caballero.html">Caballero</a></li>
-        </ul>
-      </div>
-    </div>
+  <h3>Horarios</h3>
+  <p>Lunes a Viernes: 10:00 - 13:30 / 17:00 - 20:30</p>
+  <p>Sábados: 10:00 - 14:00</p>
 
-    <div class="producto">
-      <h3>Ropa interior</h3>
-      <div class="categorias">
-        <ul>
-          <li><a href="ropa-interior-senora.html">Señora</a></li>
-          <li><a href="ropa-interior-caballero.html">Caballero</a></li>
-          <li><a href="ropa-interior-nino.html">Niñ@</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
+  <h3>Días festivos cerrados</h3>
+  <ul>
+    <li>1 de enero - Año Nuevo</li>
+    <li>6 de enero - Reyes</li>
+    <li>Fiestas de la Magdalena (marzo)</li>
+    <li>Viernes Santo</li>
+    <li>1 de mayo - Día del Trabajador</li>
+    <li>15 de agosto - Asunción</li>
+    <li>9 de octubre - Día de la Comunidad Valenciana</li>
+    <li>1 de noviembre - Todos los Santos</li>
+    <li>6 de diciembre - Día de la Constitución</li>
+    <li>8 de diciembre - Inmaculada Concepción</li>
+    <li>25 de diciembre - Navidad</li>
+  </ul>
+</div>
 
-<div class="linea"></div>
-
-<!-- Sobre nosotras -->
-<section class="sobre-nosotras" id="about">
-  <h2>Sobre nosotras</h2>
-  <p>Somos Reyes y Yolanda, dos mujeres y mamás emprendedoras. Nuestra pasión es ofrecer ropa y calzado para toda la familia con amor y estilo.</p>
-</section>
-
-<!-- Contacto -->
-<section class="contacto" id="contact">
-  <h2>Contacto</h2>
-  <p>Teléfono: <a href="tel:+34640897645">640 897645</a></p>
-  <p>Email: <a href="mailto:amitgesbyreyesyyoli@gmail.com">amitgesbyreyesyyoli@gmail.com</a></p>
-  <p>Instagram: <a href="https://www.instagram.com/amitgesbyreyesyyoli/" target="_blank">@amitgesbyreyesyyoli</a></p>
-  <p>Dirección: Avenida Castellón, 30, Benicasim, Castellón</p>
-</section>
-
-<!-- Footer -->
 <footer>
   <p>&copy; 2025 Amitges by Reyes & Yoli. Todos los derechos reservados.</p>
 </footer>
-
-<!-- Script -->
-<script>
-  let carrito = [];
-
-  function toggleCarrito() {
-    const contenido = document.getElementById('carrito-contenido');
-    contenido.style.display = contenido.style.display === 'block' ? 'none' : 'block';
-  }
-
-  function agregarCarrito(producto) {
-    carrito.push(producto);
-    actualizarCarrito();
-  }
-
-  function actualizarCarrito() {
-    const contenido = document.getElementById('carrito-contenido');
-    const botonCarrito = document.querySelector('.carrito-btn');
-    if (carrito.length === 0) {
-      contenido.innerHTML = '<p>No hay productos.</p><button onclick="vaciarCarrito()">Vaciar carrito</button>';
-    } else {
-      contenido.innerHTML = '<p>Productos:</p><ul>' + carrito.map(item => `<li>${item}</li>`).join('') + '</ul><button onclick="vaciarCarrito()">Vaciar carrito</button>';
-    }
-    botonCarrito.innerText = `Carrito (${carrito.length})`;
-  }
-
-  function vaciarCarrito() {
-    carrito = [];
-    actualizarCarrito();
-  }
-</script>
 
 </body>
 </html>
