--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
       <button onclick="mostrarCategorias('ropa')">Elegir</button>
       <div class="categorias" id="cat-ropa">
         <ul>
-          <li><a onclick="agregarCarrito('Ropa - Señora')">Señora</a></li>
-          <li><a onclick="agregarCarrito('Ropa - Caballero')">Caballero</a></li>
-          <li><a onclick="agregarCarrito('Ropa - Niñ@')">Niñ@</a></li>
+          <li><a href="ropa-senora.html">Señora</a></li>
+          <li><a href="ropa-caballero.html">Caballero</a></li>
+          <li><a href="ropa-nino.html">Niñ@</a></li>
         </ul>
       </div>
     </div>
@@ -234,9 +234,9 @@
       <button onclick="mostrarCategorias('calzado')">Elegir</button>
       <div class="categorias" id="cat-calzado">
         <ul>
-          <li><a onclick="agregarCarrito('Calzado - Señora')">Señora</a></li>
-          <li><a onclick="agregarCarrito('Calzado - Caballero')">Caballero</a></li>
-          <li><a onclick="agregarCarrito('Calzado - Niñ@')">Niñ@</a></li>
+          <li><a href="calzado-senora.html">Señora</a></li>
+          <li><a href="calzado-caballero.html">Caballero</a></li>
+          <li><a href="calzado-nino.html">Niñ@</a></li>
         </ul>
       </div>
     </div>
@@ -246,9 +246,9 @@
       <button onclick="mostrarCategorias('interior')">Elegir</button>
       <div class="categorias" id="cat-interior">
         <ul>
-          <li><a onclick="agregarCarrito('Interior - Señora')">Señora</a></li>
-          <li><a onclick="agregarCarrito('Interior - Caballero')">Caballero</a></li>
-          <li><a onclick="agregarCarrito('Interior - Niñ@')">Niñ@</a></li>
+          <li><a href="interior-senora.html">Señora</a></li>
+          <li><a href="interior-caballero.html">Caballero</a></li>
+          <li><a href="interior-nino.html">Niñ@</a></li>
         </ul>
       </div>
     </div>
