--- a/ropa-caballero.html
+++ b/ropa-caballero.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ropa Caballero - Amitges by Reyes & Yoli</title>
+  <title>Ropa - Caballero | Amitges by Reyes & Yoli</title>
   <style>
     body {
       font-family: 'Georgia', serif;
+      margin: 0;
+      padding: 0;
       background-color: #FFFFFF;
       color: #2D1D2B;
     }
@@ -18,6 +20,12 @@
       justify-content: space-between;
       align-items: center;
       color: white;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
 
     .logo img {
@@ -33,6 +41,8 @@
       list-style: none;
       display: flex;
       gap: 25px;
+      margin: 0;
+      padding: 0;
     }
 
     nav a {
@@ -41,9 +51,49 @@
       font-weight: 500;
     }
 
-    .productos {
+    nav a:hover {
+      color: #d1c0d0;
+    }
+
+    .productos-destacados {
       padding: 40px 20px;
+      background: #FFFFFF;
       text-align: center;
+    }
+
+    .productos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 20px;
+    }
+
+    .producto {
+      background: #F3EDF1;
+      padding: 20px;
+      border-radius: 12px;
+      width: 250px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
+
+    .producto:hover {
+      transform: translateY(-5px);
+    }
+
+    .producto button {
+      margin-top: 15px;
+      padding: 8px 20px;
+      background-color: #5A3D57;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .producto button:hover {
+      background-color: #402A3C;
     }
 
     footer {
@@ -51,6 +101,7 @@
       color: white;
       text-align: center;
       padding: 15px 10px;
+      font-size: 0.9em;
     }
   </style>
 </head>
@@ -65,19 +116,37 @@
   <nav>
     <ul>
       <li><a href="index.html">Inicio</a></li>
-      <li><a href="ropa-caballero.html">Ropa Caballero</a></li>
-      <li><a href="calzado-caballero.html">Calzado Caballero</a></li>
-      <li><a href="ropa-nino.html">Ropa Niñ@</a></li>
-      <li><a href="ropa-senora.html">Ropa Señora</a></li>
+      <li><a href="ropa-senora.html">Ropa - Señora</a></li>
+      <li><a href="ropa-caballero.html">Ropa - Caballero</a></li>
+      <li><a href="ropa-nino.html">Ropa - Niñ@</a></li>
+      <li><a href="#about">Sobre nosotras</a></li>
+      <li><a href="#contact">Contacto</a></li>
     </ul>
   </nav>
 </header>
 
-<!-- Productos -->
-<section class="productos">
-  <h2>Ropa Caballero</h2>
-  <p>Descubre nuestra exclusiva colección para caballeros. Aquí encontrarás los mejores estilos para cada ocasión.</p>
-  <!-- Aquí añadirás los productos -->
+<!-- Productos Ropa - Caballero -->
+<section class="productos-destacados">
+  <h2>Ropa - Caballero</h2>
+  <div class="productos">
+    <div class="producto">
+      <img src="producto1-caballero.jpg" alt="Producto 1">
+      <h3>Camiseta Casual</h3>
+      <button>Agregar al carrito</button>
+    </div>
+
+    <div class="producto">
+      <img src="producto2-caballero.jpg" alt="Producto 2">
+      <h3>Pantalón Formal</h3>
+      <button>Agregar al carrito</button>
+    </div>
+
+    <div class="producto">
+      <img src="producto3-caballero.jpg" alt="Producto 3">
+      <h3>Chaqueta de Cuero</h3>
+      <button>Agregar al carrito</button>
+    </div>
+  </div>
 </section>
 
 <!-- Footer -->
