--- a/index.html
+++ b/index.html
@@ -219,36 +219,17 @@
   <div class="productos">
     <div class="producto">
       <h3>Ropa</h3>
-      <button onclick="mostrarCategorias('ropa')">Elegir</button>
-      <div class="categorias" id="cat-ropa">
-        <ul>
-          <li><a href="ropa-senora.html">Señora</a></li>
-          <li><a href="ropa-caballero.html">Caballero</a></li>
-          <li><a href="ropa-nino.html">Niñ@</a></li>
-        </ul>
-      </div>
+      <button onclick="agregarAlCarrito('Ropa Caballero')">Elegir</button>
     </div>
 
     <div class="producto">
       <h3>Calzado</h3>
-      <button onclick="mostrarCategorias('calzado')">Elegir</button>
-      <div class="categorias" id="cat-calzado">
-        <ul>
-          <li><a href="calzado-caballero.html">Caballero</a></li>
-        </ul>
-      </div>
+      <button onclick="agregarAlCarrito('Calzado Caballero')">Elegir</button>
     </div>
 
     <div class="producto">
       <h3>Ropa interior</h3>
-      <button onclick="mostrarCategorias('interior')">Elegir</button>
-      <div class="categorias" id="cat-interior">
-        <ul>
-          <li><a href="interior-senora.html">Señora</a></li>
-          <li><a href="interior-caballero.html">Caballero</a></li>
-          <li><a href="interior-nino.html">Niñ@</a></li>
-        </ul>
-      </div>
+      <button onclick="agregarAlCarrito('Ropa Interior Caballero')">Elegir</button>
     </div>
   </div>
 </section>
@@ -284,7 +265,7 @@
     contenido.style.display = contenido.style.display === 'block' ? 'none' : 'block';
   }
 
-  function agregarCarrito(producto) {
+  function agregarAlCarrito(producto) {
     carrito.push(producto);
     actualizarCarrito();
   }
@@ -304,12 +285,6 @@
   function vaciarCarrito() {
     carrito = [];
     actualizarCarrito();
-  }
-
-  function mostrarCategorias(tipo) {
-    const categorias = document.querySelectorAll('.categorias');
-    categorias.forEach(cat => cat.style.display = 'none');
-    document.getElementById('cat-' + tipo).style.display = 'block';
   }
 
   // Cargar carrito al inicio
