--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
       <button onclick="mostrarCategorias('ropa')">Elegir</button>
       <div class="categorias" id="cat-ropa">
         <ul>
-          <li><a href="ropa-senora.html">Señora</a></li>
-          <li><a href="ropa-caballero.html">Caballero</a></li>
-          <li><a href="ropa-nino.html">Niñ@</a></li>
+          <li><a href="#" onclick="agregarCarrito('Ropa Señora')">Señora</a></li>
+          <li><a href="#" onclick="agregarCarrito('Ropa Caballero')">Caballero</a></li>
+          <li><a href="#" onclick="agregarCarrito('Ropa Niño')">Niñ@</a></li>
         </ul>
       </div>
     </div>
@@ -234,7 +234,7 @@
       <button onclick="mostrarCategorias('calzado')">Elegir</button>
       <div class="categorias" id="cat-calzado">
         <ul>
-          <li><a href="calzado-caballero.html">Caballero</a></li>
+          <li><a href="#" onclick="agregarCarrito('Calzado Caballero')">Caballero</a></li>
         </ul>
       </div>
     </div>
@@ -244,9 +244,9 @@
       <button onclick="mostrarCategorias('interior')">Elegir</button>
       <div class="categorias" id="cat-interior">
         <ul>
-          <li><a href="interior-senora.html">Señora</a></li>
-          <li><a href="interior-caballero.html">Caballero</a></li>
-          <li><a href="interior-nino.html">Niñ@</a></li>
+          <li><a href="#" onclick="agregarCarrito('Ropa Interior Señora')">Señora</a></li>
+          <li><a href="#" onclick="agregarCarrito('Ropa Interior Caballero')">Caballero</a></li>
+          <li><a href="#" onclick="agregarCarrito('Ropa Interior Niño')">Niñ@</a></li>
         </ul>
       </div>
     </div>
@@ -279,6 +279,8 @@
 <script>
   let carrito = JSON.parse(localStorage.getItem('carrito')) || [];
 
+  window.onload = actualizarCarrito;
+
   function toggleCarrito() {
     const contenido = document.getElementById('carrito-contenido');
     contenido.style.display = contenido.style.display === 'block' ? 'none' : 'block';
@@ -297,7 +299,7 @@
     } else {
       contenido.innerHTML = '<p>Productos:</p><ul>' + carrito.map(item => `<li>${item}</li>`).join('') + '</ul><button onclick="vaciarCarrito()">Vaciar carrito</button>';
     }
-    botonCarrito.innerText = `Carrito (${carrito.length})`;
+    botonCarrito.innerHTML = `Carrito (${carrito.length})`;
     localStorage.setItem('carrito', JSON.stringify(carrito));
   }
 
@@ -306,14 +308,11 @@
     actualizarCarrito();
   }
 
-  function mostrarCategorias(tipo) {
+  function mostrarCategorias(categoria) {
     const categorias = document.querySelectorAll('.categorias');
-    categorias.forEach(categoria => categoria.style.display = 'none');
-    
-    const categoria = document.getElementById('cat-' + tipo);
-    if (categoria) {
-      categoria.style.display = 'block';
-    }
+    categorias.forEach(cat => cat.style.display = 'none');
+    const categoriaElement = document.getElementById(`cat-${categoria}`);
+    categoriaElement.style.display = 'block';
   }
 </script>
 
